force-app/main/default/objects/Reset_Return_Tracking_EA__e/Reset_Return_Tracking_EA__e.object-meta.xml
<CustomObject>
    <description>Platform event to reset points for Returns loyalty process</description>
    <label>Reset Return Tracking EA</label>
    <pluralLabel>Reset Return Tracking EAs</pluralLabel>
</CustomObject>