force-app/main/default/objects/Reset_Return_Tracking_EA__e/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>Returns activity date from transaction journal</description>
    <label>Activity Date</label>
    <type>DateTime</type>
</CustomField>