force-app/main/default/objects/Reset_Return_Tracking_EA__e/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <description>Loyalty program member ID</description>
    <label>Member Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>