force-app/main/default/objects/Reset_Return_Tracking_EA__e/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <description>Loyalty program ID</description>
    <label>Program Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>